# fix-lang

./: CMakeLists.txt  fix.py  ignore.cc  interpreter.cc  interpreter.hh  macros.hh  run.sh  test.cc  test.hh  util.hh  wasi_snapshot_preview1.wasm
blobs/: add.cc  eq.cc  if.cc  mul.cc  sub.cc
includes/: fixpoint_storage.wasm  linked_with_asm_flatware.wasm
src/: interpreter.cc  interpreter.hh  util.hh
